Implemented SunFontAccessorImpl